# robin

./: .app_robin.json  .base_robin.json  .robin.config.json  .robin.json  .robin2.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  cli.js  cliff.toml  migrate_template.py  otherrobin.json  package-lock.json  package.json  release.toml  robin.json
.github/workflows/: node.js.yml  release.yml
js-implementation/.github/workflows/: node.js.yml
js-implementation/src/: router.js
js-implementation/src/utils/: utils.js
robin-rs/: .robin.json  Cargo.toml  README.md
robin-rs/src/: cli.rs  config.rs  main.rs
schema/: robin.schema.json
scripts/: prepare_release.py
src/: config.rs  lib.rs  main.rs  router.js
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  robin_config.rs
src/scripts/: mod.rs  script_runner.rs
src/tasks/: init_task.js  interactive_task.js  list_task.js  run_task.js
src/tools/: mod.rs  required_tools.rs
src/utils/: command_utils.rs  env_file.rs  mod.rs  notifications.rs  update_check.rs  utils.js
template/: android-robin.config.json  flutter-robin.config.json  sample-robin.config copy.json  sample-robin.config.json
templates/: android.json  flutter.json  go.json  ios.json  nextjs.json  node.json  python.json  rails.json  rust.json  sample.json
tests/: command_tests.rs  config_load_tests.rs  config_tests.rs  doctor_tests.rs  env_file_tests.rs  script_tests.rs
tests/common/: mod.rs
