[package]
name = "robin"
version = "0.1.0"
edition = "2021"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
description = "A CLI tool to run scripts for any project (Rust version)"
license = "MIT"

[[bin]]
name = "robin"
path = "src/main.rs"

[lib]
name = "robin"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
inquire = "0.6"
fuzzy-matcher = "0.3"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
notify-rust = "4.10"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
tokio-test = "0.4"
