[package]
name = "robin_cli_tool"
version = "1.0.2"
edition = "2021"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
description = "A CLI tool to run scripts for any project"
license = "MIT"
repository = "https://github.com/cesarferreira/robin"
homepage = "https://github.com/cesarferreira/robin"
readme = "README.md"

[[bin]]
name = "robin"
path = "src/main.rs"

[lib]
name = "robin"
path = "src/lib.rs"

[features]
test-utils = []

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
inquire = "0.9"
anyhow = "1.0"
regex = "1.12"
notify-rust = "4.18"
dialoguer = "0.12"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.27"
mockito = "1.7"
tokio-test = "0.4"
