[package]
name = "robin"
version = "0.1.0"
edition = "2021"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
description = "A CLI tool to run scripts for any project (Rust version)"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
inquire = "0.6"
fuzzy-matcher = "0.3"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
